--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,48 +1,67 @@
 # 2024-04-02
 
-共 176 条
+共 193 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 12:00:37 GMT+0800 (China Standard Time) -->
-1. [台媒：台军暂缓在金门对海实弹射击](https://so.toutiao.com/search?keyword=台媒：台军暂缓在金门对海实弹射击)
+<!-- 最后更新时间 Tue Apr 02 2024 13:00:42 GMT+0800 (China Standard Time) -->
+1. [南昌3人坠亡小区开发商曾涉贪腐大案](https://so.toutiao.com/search?keyword=南昌3人坠亡小区开发商曾涉贪腐大案)
 1. [媒体：提灯定损房东是怎么炼成的](https://so.toutiao.com/search?keyword=媒体：提灯定损房东是怎么炼成的)
 1. [多地这样抢抓“春播期”](https://so.toutiao.com/search?keyword=多地这样抢抓“春播期”)
 1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
 1. [以色列空袭伊朗驻叙使馆致7死](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆致7死)
-1. [曝任正非禁止余承东说遥遥领先](https://so.toutiao.com/search?keyword=曝任正非禁止余承东说遥遥领先)
-1. [专家解读为何国家不再全额购电](https://so.toutiao.com/search?keyword=专家解读为何国家不再全额购电)
-1. [伊朗大使：将果断回应以色列行动](https://so.toutiao.com/search?keyword=伊朗大使：将果断回应以色列行动)
-1. [女子32万买健身课被安排一天六七节](https://so.toutiao.com/search?keyword=女子32万买健身课被安排一天六七节)
-1. [吴艳妮“霸王步”再现](https://so.toutiao.com/search?keyword=吴艳妮“霸王步”再现)
-1. [玉山退房事件房东还有哪些麻烦待解](https://so.toutiao.com/search?keyword=玉山退房事件房东还有哪些麻烦待解)
-1. [乌克兰足坛传奇舍甫琴科参战？假的](https://so.toutiao.com/search?keyword=乌克兰足坛传奇舍甫琴科参战？假的)
-1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
-1. [南昌强对流天气致人坠亡 警方介入](https://so.toutiao.com/search?keyword=南昌强对流天气致人坠亡+警方介入)
-1. [克拉拉现场表演张元英转圈](https://so.toutiao.com/search?keyword=克拉拉现场表演张元英转圈)
-1. [冯绍峰谈到儿子眼圈红了](https://so.toutiao.com/search?keyword=冯绍峰谈到儿子眼圈红了)
-1. [女子入职体检发现怀孕后岗位被取消](https://so.toutiao.com/search?keyword=女子入职体检发现怀孕后岗位被取消)
-1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
-1. [菲媒：菲律宾人必须反对与中国开战](https://so.toutiao.com/search?keyword=菲媒：菲律宾人必须反对与中国开战)
-1. [伊朗使馆遇袭细节披露](https://so.toutiao.com/search?keyword=伊朗使馆遇袭细节披露)
-1. [安徽江淮汽车集团原董事长安进被查](https://so.toutiao.com/search?keyword=安徽江淮汽车集团原董事长安进被查)
-1. [房价为何看起来没跌很多](https://so.toutiao.com/search?keyword=房价为何看起来没跌很多)
-1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
-1. [小米汽车：SU7创始版均非库存车](https://so.toutiao.com/search?keyword=小米汽车：SU7创始版均非库存车)
 1. [网友调侃新成语《提灯定损》](https://so.toutiao.com/search?keyword=网友调侃新成语《提灯定损》)
-1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
-1. [莫斯科恐袭案资助者遭审讯视频曝光](https://so.toutiao.com/search?keyword=莫斯科恐袭案资助者遭审讯视频曝光)
-1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
-1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
-1. [快递公司一元一斤倒卖退回件](https://so.toutiao.com/search?keyword=快递公司一元一斤倒卖退回件)
+1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
+1. [吴艳妮“霸王步”再现](https://so.toutiao.com/search?keyword=吴艳妮“霸王步”再现)
+1. [11岁女孩遇害 家属：不认识嫌疑人](https://so.toutiao.com/search?keyword=11岁女孩遇害+家属：不认识嫌疑人)
+1. [克拉拉现场表演张元英转圈](https://so.toutiao.com/search?keyword=克拉拉现场表演张元英转圈)
+1. [乌克兰足坛传奇舍甫琴科参战？假的](https://so.toutiao.com/search?keyword=乌克兰足坛传奇舍甫琴科参战？假的)
+1. [以色列空袭伊朗驻叙使馆引多国谴责](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆引多国谴责)
+1. [玉山退房事件房东还有哪些麻烦待解](https://so.toutiao.com/search?keyword=玉山退房事件房东还有哪些麻烦待解)
+1. [曝任正非禁止余承东说遥遥领先](https://so.toutiao.com/search?keyword=曝任正非禁止余承东说遥遥领先)
+1. [伊朗大使：将果断回应以色列行动](https://so.toutiao.com/search?keyword=伊朗大使：将果断回应以色列行动)
+1. [孕妇店内分娩丈夫挂红布给红包感谢](https://so.toutiao.com/search?keyword=孕妇店内分娩丈夫挂红布给红包感谢)
+1. [媒体评提灯定损：别上升到地域歧视](https://so.toutiao.com/search?keyword=媒体评提灯定损：别上升到地域歧视)
+1. [美俄回应伊朗驻叙利亚使馆建筑遭袭](https://so.toutiao.com/search?keyword=美俄回应伊朗驻叙利亚使馆建筑遭袭)
+1. [女子入职体检发现怀孕后岗位被取消](https://so.toutiao.com/search?keyword=女子入职体检发现怀孕后岗位被取消)
+1. [大爷进店乞讨店员过去就给大爷跪下](https://so.toutiao.com/search?keyword=大爷进店乞讨店员过去就给大爷跪下)
+1. [伊朗：美应为伊朗驻叙使馆遭袭负责](https://so.toutiao.com/search?keyword=伊朗：美应为伊朗驻叙使馆遭袭负责)
+1. [论斤称的“快递盲盒”真能拆出宝？](https://so.toutiao.com/search?keyword=论斤称的“快递盲盒”真能拆出宝？)
 1. [韩美娟也来模仿张元英转圈了](https://so.toutiao.com/search?keyword=韩美娟也来模仿张元英转圈了)
-1. [文在寅批尹锡悦政府：70年来最差](https://so.toutiao.com/search?keyword=文在寅批尹锡悦政府：70年来最差)
+1. [以炸平伊朗使馆更多细节流出](https://so.toutiao.com/search?keyword=以炸平伊朗使馆更多细节流出)
 1. [韵达工作人员向记者兜售快递退件](https://so.toutiao.com/search?keyword=韵达工作人员向记者兜售快递退件)
-1. [蓝营民代解读邱国正儿子召妓被调查](https://so.toutiao.com/search?keyword=蓝营民代解读邱国正儿子召妓被调查)
+1. [小米汽车：SU7创始版均非库存车](https://so.toutiao.com/search?keyword=小米汽车：SU7创始版均非库存车)
+1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
+1. [台民众挺马英九赴陆交流](https://so.toutiao.com/search?keyword=台民众挺马英九赴陆交流)
+1. [冯绍峰谈到儿子眼圈红了](https://so.toutiao.com/search?keyword=冯绍峰谈到儿子眼圈红了)
+1. [南昌强对流天气致人坠亡 警方介入](https://so.toutiao.com/search?keyword=南昌强对流天气致人坠亡+警方介入)
+1. [伊朗使馆遇袭细节披露](https://so.toutiao.com/search?keyword=伊朗使馆遇袭细节披露)
+1. [菲媒：菲律宾人必须反对与中国开战](https://so.toutiao.com/search?keyword=菲媒：菲律宾人必须反对与中国开战)
+1. [安徽江淮汽车集团原董事长安进被查](https://so.toutiao.com/search?keyword=安徽江淮汽车集团原董事长安进被查)
+1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
+1. [莫斯科恐袭案资助者遭审讯视频曝光](https://so.toutiao.com/search?keyword=莫斯科恐袭案资助者遭审讯视频曝光)
+1. [午评：创业板指探底回升跌0.21%](https://so.toutiao.com/search?keyword=午评：创业板指探底回升跌0.21%)
+1. [淄博烧烤老板们相互送客人](https://so.toutiao.com/search?keyword=淄博烧烤老板们相互送客人)
+1. [专家解读为何国家不再全额购电](https://so.toutiao.com/search?keyword=专家解读为何国家不再全额购电)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [博主：李铁给已瘫痪的队友一份营生](https://so.toutiao.com/search?keyword=博主：李铁给已瘫痪的队友一份营生)
 1. [赵丽颖这手劲一如既往的大](https://so.toutiao.com/search?keyword=赵丽颖这手劲一如既往的大)
+1. [房价为何看起来没跌很多](https://so.toutiao.com/search?keyword=房价为何看起来没跌很多)
+1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
+1. [文在寅批尹锡悦政府：70年来最差](https://so.toutiao.com/search?keyword=文在寅批尹锡悦政府：70年来最差)
 1. [《追风者》中隐藏最深的人](https://so.toutiao.com/search?keyword=《追风者》中隐藏最深的人)
+1. [玻璃窗为何会被吹走？专业人士解答](https://so.toutiao.com/search?keyword=玻璃窗为何会被吹走？专业人士解答)
+1. [小米汽车有销售已完成2个月任务量](https://so.toutiao.com/search?keyword=小米汽车有销售已完成2个月任务量)
+1. [机构：黄金或将开启持续上涨行情](https://so.toutiao.com/search?keyword=机构：黄金或将开启持续上涨行情)
+1. [台媒：台军暂缓在金门对海实弹射击](https://so.toutiao.com/search?keyword=台媒：台军暂缓在金门对海实弹射击)
+1. [女子32万买健身课被安排一天六七节](https://so.toutiao.com/search?keyword=女子32万买健身课被安排一天六七节)
+1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
+1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
+1. [快递公司一元一斤倒卖退回件](https://so.toutiao.com/search?keyword=快递公司一元一斤倒卖退回件)
+1. [蓝营民代解读邱国正儿子召妓被调查](https://so.toutiao.com/search?keyword=蓝营民代解读邱国正儿子召妓被调查)
 1. [叙伊外长就大马士革遭以空袭通电话](https://so.toutiao.com/search?keyword=叙伊外长就大马士革遭以空袭通电话)
 1. [央视网评退件快递变盲盒](https://so.toutiao.com/search?keyword=央视网评退件快递变盲盒)
-1. [媒体评提灯定损：别上升到地域歧视](https://so.toutiao.com/search?keyword=媒体评提灯定损：别上升到地域歧视)
 1. [自闭症不是父母教养方式导致的](https://so.toutiao.com/search?keyword=自闭症不是父母教养方式导致的)
 1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
@@ -50,8 +69,6 @@
 1. [开封王婆：不敢带货怕被说物质](https://so.toutiao.com/search?keyword=开封王婆：不敢带货怕被说物质)
 1. [摩托骑手砸后视镜 司机追赶时追尾](https://so.toutiao.com/search?keyword=摩托骑手砸后视镜+司机追赶时追尾)
 1. [带娃漂流遭扔石头 涉事人员被拘](https://so.toutiao.com/search?keyword=带娃漂流遭扔石头+涉事人员被拘)
-1. [小米汽车有销售已完成2个月任务量](https://so.toutiao.com/search?keyword=小米汽车有销售已完成2个月任务量)
-1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
 1. [浙江余姚通报公职人员醉驾涉黑问题](https://so.toutiao.com/search?keyword=浙江余姚通报公职人员醉驾涉黑问题)
 1. [专家：美菲都没胆启动共同防御条约](https://so.toutiao.com/search?keyword=专家：美菲都没胆启动共同防御条约)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
