--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,53 +1,71 @@
 # 2024-04-02
 
-共 277 条
+共 294 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 19:00:49 GMT+0800 (China Standard Time) -->
-1. [马英九反问车上视频开会功能有必要吗](https://so.toutiao.com/search?keyword=马英九反问车上视频开会功能有必要吗)
+<!-- 最后更新时间 Tue Apr 02 2024 20:00:43 GMT+0800 (China Standard Time) -->
 1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
-1. [制造业产需指数向好预示着什么](https://so.toutiao.com/search?keyword=制造业产需指数向好预示着什么)
 1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
+1. [制造业产需指数向好预示着什么](https://so.toutiao.com/search?keyword=制造业产需指数向好预示着什么)
 1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
-1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
-1. [江西南昌暴雨致房屋坍塌11人受伤](https://so.toutiao.com/search?keyword=江西南昌暴雨致房屋坍塌11人受伤)
 1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
+1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
+1. [江西南昌暴雨致房屋坍塌11人受伤](https://so.toutiao.com/search?keyword=江西南昌暴雨致房屋坍塌11人受伤)
+1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
 1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
 1. [乌兹别克斯坦总统会见王小洪](https://so.toutiao.com/search?keyword=乌兹别克斯坦总统会见王小洪)
 1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
+1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
+1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
+1. [南昌极端天气：乌云压境压迫感强](https://so.toutiao.com/search?keyword=南昌极端天气：乌云压境压迫感强)
+1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
+1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
+1. [大连星海湾大桥建设方被罚2700万元](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万元)
+1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
+1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
+1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
+1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
+1. [唐一军3月仍出席公开活动](https://so.toutiao.com/search?keyword=唐一军3月仍出席公开活动)
+1. [中国夫妇在刚果（金）遇袭致一死](https://so.toutiao.com/search?keyword=中国夫妇在刚果（金）遇袭致一死)
+1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
+1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
+1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
+1. [娃哈哈回应未拆封饮料疑现蟑螂](https://so.toutiao.com/search?keyword=娃哈哈回应未拆封饮料疑现蟑螂)
+1. [体育生的饭量是个谜](https://so.toutiao.com/search?keyword=体育生的饭量是个谜)
+1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
+1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
+1. [博主早年租房给肯德基如今租金320万](https://so.toutiao.com/search?keyword=博主早年租房给肯德基如今租金320万)
+1. [直击南昌房屋坍塌事故现场](https://so.toutiao.com/search?keyword=直击南昌房屋坍塌事故现场)
+1. [特朗普财富蒸发逾10亿美元](https://so.toutiao.com/search?keyword=特朗普财富蒸发逾10亿美元)
+1. [开封王婆：网传婚介所跟我无关](https://so.toutiao.com/search?keyword=开封王婆：网传婚介所跟我无关)
+1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
+1. [江苏10万游客2天吃掉20万斤螺蛳](https://so.toutiao.com/search?keyword=江苏10万游客2天吃掉20万斤螺蛳)
+1. [媒体评提灯定损：别上升到地域歧视](https://so.toutiao.com/search?keyword=媒体评提灯定损：别上升到地域歧视)
+1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
+1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
+1. [170秒看懂中东“炸馆”事件](https://so.toutiao.com/search?keyword=170秒看懂中东“炸馆”事件)
+1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
+1. [农业农村部加大对违规垂钓打击力度](https://so.toutiao.com/search?keyword=农业农村部加大对违规垂钓打击力度)
+1. [大众帕萨特焕新升级](https://so.toutiao.com/search?keyword=大众帕萨特焕新升级)
+1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
+1. [赵小棠妈妈好时髦](https://so.toutiao.com/search?keyword=赵小棠妈妈好时髦)
+1. [直击南昌强对流天气现场](https://so.toutiao.com/search?keyword=直击南昌强对流天气现场)
+1. [中方谴责加沙国际救援人员遭袭事件](https://so.toutiao.com/search?keyword=中方谴责加沙国际救援人员遭袭事件)
+1. [博主：李铁给已瘫痪的队友一份营生](https://so.toutiao.com/search?keyword=博主：李铁给已瘫痪的队友一份营生)
+1. [雷军能否躲过“产能地狱”](https://so.toutiao.com/search?keyword=雷军能否躲过“产能地狱”)
+1. [马英九反问车上视频开会功能有必要吗](https://so.toutiao.com/search?keyword=马英九反问车上视频开会功能有必要吗)
 1. [网传北京某高校着火？实为消防演练](https://so.toutiao.com/search?keyword=网传北京某高校着火？实为消防演练)
 1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
-1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
-1. [直击南昌强对流天气现场](https://so.toutiao.com/search?keyword=直击南昌强对流天气现场)
-1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
-1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
-1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
-1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
-1. [唐一军3月仍出席公开活动](https://so.toutiao.com/search?keyword=唐一军3月仍出席公开活动)
-1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
-1. [南昌极端天气：乌云压境压迫感强](https://so.toutiao.com/search?keyword=南昌极端天气：乌云压境压迫感强)
-1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
-1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
-1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
-1. [体育生的饭量是个谜](https://so.toutiao.com/search?keyword=体育生的饭量是个谜)
-1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
 1. [媒体：上饶应直面提灯定损讹诈质疑](https://so.toutiao.com/search?keyword=媒体：上饶应直面提灯定损讹诈质疑)
-1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
-1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
 1. [以色列空袭伊朗驻叙使馆引多国谴责](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆引多国谴责)
-1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
-1. [博主：李铁给已瘫痪的队友一份营生](https://so.toutiao.com/search?keyword=博主：李铁给已瘫痪的队友一份营生)
-1. [170秒看懂中东“炸馆”事件](https://so.toutiao.com/search?keyword=170秒看懂中东“炸馆”事件)
 1. [媒体：“提灯定损”戳中租房者痛点](https://so.toutiao.com/search?keyword=媒体：“提灯定损”戳中租房者痛点)
 1. [叔叔把球踢给萌娃结果“爆头”了](https://so.toutiao.com/search?keyword=叔叔把球踢给萌娃结果“爆头”了)
 1. [落马市长还曾收受外甥贿赂520多万](https://so.toutiao.com/search?keyword=落马市长还曾收受外甥贿赂520多万)
-1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
-1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
 1. [天水旅游热持续升温](https://so.toutiao.com/search?keyword=天水旅游热持续升温)
 1. [父母因拆迁款如何分给儿女“吵起来”](https://so.toutiao.com/search?keyword=父母因拆迁款如何分给儿女“吵起来”)
 1. [女子指使猴子给自己剥橘子嗑瓜子](https://so.toutiao.com/search?keyword=女子指使猴子给自己剥橘子嗑瓜子)
 1. [记者质疑美方：军火是助以色列自卫吗](https://so.toutiao.com/search?keyword=记者质疑美方：军火是助以色列自卫吗)
-1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
 1. [海南交通厅厅长副厅长同时官宣被查](https://so.toutiao.com/search?keyword=海南交通厅厅长副厅长同时官宣被查)
 1. [菲总统姐姐：菲在南海“上头了”](https://so.toutiao.com/search?keyword=菲总统姐姐：菲在南海“上头了”)
 1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
@@ -82,7 +100,6 @@
 1. [大V：提灯定损引网友愤怒的8个原因](https://so.toutiao.com/search?keyword=大V：提灯定损引网友愤怒的8个原因)
 1. [11岁女孩遇害 家属：不认识嫌疑人](https://so.toutiao.com/search?keyword=11岁女孩遇害+家属：不认识嫌疑人)
 1. [伊朗称已对使馆建筑遭袭作适当决定](https://so.toutiao.com/search?keyword=伊朗称已对使馆建筑遭袭作适当决定)
-1. [媒体评提灯定损：别上升到地域歧视](https://so.toutiao.com/search?keyword=媒体评提灯定损：别上升到地域歧视)
 1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
 1. [不足额支付代驾费 代驾小哥讨说法](https://so.toutiao.com/search?keyword=不足额支付代驾费+代驾小哥讨说法)
 1. [外交部回应伊朗驻叙利亚使馆遭袭](https://so.toutiao.com/search?keyword=外交部回应伊朗驻叙利亚使馆遭袭)
