--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,51 +1,68 @@
 # 2024-04-02
 
-共 294 条
+共 309 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 20:00:43 GMT+0800 (China Standard Time) -->
-1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
-1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
+<!-- 最后更新时间 Tue Apr 02 2024 21:03:37 GMT+0800 (China Standard Time) -->
+1. [提灯定损事件追踪](https://so.toutiao.com/search?keyword=提灯定损事件追踪)
+1. [马英九考解说员“孙中山穿几号鞋”](https://so.toutiao.com/search?keyword=马英九考解说员“孙中山穿几号鞋”)
 1. [制造业产需指数向好预示着什么](https://so.toutiao.com/search?keyword=制造业产需指数向好预示着什么)
-1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
-1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
-1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
+1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
+1. [伊朗最高领袖：以色列将受到惩罚](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将受到惩罚)
+1. [8斤重大甲鱼钓上岸 取钩时光速逃跑](https://so.toutiao.com/search?keyword=8斤重大甲鱼钓上岸+取钩时光速逃跑)
 1. [江西南昌暴雨致房屋坍塌11人受伤](https://so.toutiao.com/search?keyword=江西南昌暴雨致房屋坍塌11人受伤)
-1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
-1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
-1. [乌兹别克斯坦总统会见王小洪](https://so.toutiao.com/search?keyword=乌兹别克斯坦总统会见王小洪)
-1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
-1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
+1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
+1. [111岁开国少将张力雄逝世](https://so.toutiao.com/search?keyword=111岁开国少将张力雄逝世)
+1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
 1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
+1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
+1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
+1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
+1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
+1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
+1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
+1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
+1. [娃哈哈回应未拆封饮料疑现蟑螂](https://so.toutiao.com/search?keyword=娃哈哈回应未拆封饮料疑现蟑螂)
+1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
+1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
 1. [南昌极端天气：乌云压境压迫感强](https://so.toutiao.com/search?keyword=南昌极端天气：乌云压境压迫感强)
 1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
-1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
-1. [大连星海湾大桥建设方被罚2700万元](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万元)
-1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [继冰雹红警后南昌又发布大风红警](https://so.toutiao.com/search?keyword=继冰雹红警后南昌又发布大风红警)
+1. [周鸿祎谈小米为什么要造车](https://so.toutiao.com/search?keyword=周鸿祎谈小米为什么要造车)
+1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
+1. [中方：菲律宾在南海问题上背弃承诺](https://so.toutiao.com/search?keyword=中方：菲律宾在南海问题上背弃承诺)
+1. [大连星海湾大桥建设方被罚2700万](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万)
 1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
+1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
+1. [山火烧过的土地正在被春天治愈](https://so.toutiao.com/search?keyword=山火烧过的土地正在被春天治愈)
+1. [江苏10万游客2天吃掉20万斤螺蛳](https://so.toutiao.com/search?keyword=江苏10万游客2天吃掉20万斤螺蛳)
+1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
+1. [开封王婆：网传婚介所跟我无关](https://so.toutiao.com/search?keyword=开封王婆：网传婚介所跟我无关)
+1. [以军称遭袭伊朗外交机构为军事建筑](https://so.toutiao.com/search?keyword=以军称遭袭伊朗外交机构为军事建筑)
+1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
 1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
-1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
-1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
+1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
+1. [开封王婆坦言自己追的老公](https://so.toutiao.com/search?keyword=开封王婆坦言自己追的老公)
+1. [租房给肯德基24年租金涨到320万](https://so.toutiao.com/search?keyword=租房给肯德基24年租金涨到320万)
+1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
+1. [西首相谈慈善组织成员加沙遇袭身亡](https://so.toutiao.com/search?keyword=西首相谈慈善组织成员加沙遇袭身亡)
+1. [伊朗总统：以色列罪行势必得到回应](https://so.toutiao.com/search?keyword=伊朗总统：以色列罪行势必得到回应)
+1. [直击南昌房屋坍塌事故现场](https://so.toutiao.com/search?keyword=直击南昌房屋坍塌事故现场)
+1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
+1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
+1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
+1. [以爆发本轮冲突以来最大规模抗议](https://so.toutiao.com/search?keyword=以爆发本轮冲突以来最大规模抗议)
+1. [乌兹别克斯坦总统会见王小洪](https://so.toutiao.com/search?keyword=乌兹别克斯坦总统会见王小洪)
+1. [大连星海湾大桥建设方被罚2700万元](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万元)
 1. [唐一军3月仍出席公开活动](https://so.toutiao.com/search?keyword=唐一军3月仍出席公开活动)
 1. [中国夫妇在刚果（金）遇袭致一死](https://so.toutiao.com/search?keyword=中国夫妇在刚果（金）遇袭致一死)
-1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
-1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
-1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
-1. [娃哈哈回应未拆封饮料疑现蟑螂](https://so.toutiao.com/search?keyword=娃哈哈回应未拆封饮料疑现蟑螂)
 1. [体育生的饭量是个谜](https://so.toutiao.com/search?keyword=体育生的饭量是个谜)
-1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
-1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
 1. [博主早年租房给肯德基如今租金320万](https://so.toutiao.com/search?keyword=博主早年租房给肯德基如今租金320万)
-1. [直击南昌房屋坍塌事故现场](https://so.toutiao.com/search?keyword=直击南昌房屋坍塌事故现场)
 1. [特朗普财富蒸发逾10亿美元](https://so.toutiao.com/search?keyword=特朗普财富蒸发逾10亿美元)
-1. [开封王婆：网传婚介所跟我无关](https://so.toutiao.com/search?keyword=开封王婆：网传婚介所跟我无关)
-1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
-1. [江苏10万游客2天吃掉20万斤螺蛳](https://so.toutiao.com/search?keyword=江苏10万游客2天吃掉20万斤螺蛳)
 1. [媒体评提灯定损：别上升到地域歧视](https://so.toutiao.com/search?keyword=媒体评提灯定损：别上升到地域歧视)
-1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
-1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
 1. [170秒看懂中东“炸馆”事件](https://so.toutiao.com/search?keyword=170秒看懂中东“炸馆”事件)
-1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
 1. [农业农村部加大对违规垂钓打击力度](https://so.toutiao.com/search?keyword=农业农村部加大对违规垂钓打击力度)
 1. [大众帕萨特焕新升级](https://so.toutiao.com/search?keyword=大众帕萨特焕新升级)
 1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
@@ -89,7 +106,6 @@
 1. [乌克兰足坛传奇舍甫琴科参战？假的](https://so.toutiao.com/search?keyword=乌克兰足坛传奇舍甫琴科参战？假的)
 1. [马英九获大陆高规格接待背后有何深意](https://so.toutiao.com/search?keyword=马英九获大陆高规格接待背后有何深意)
 1. [南昌3人坠亡小区开发商曾涉贪腐大案](https://so.toutiao.com/search?keyword=南昌3人坠亡小区开发商曾涉贪腐大案)
-1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [伊朗爆发集会抗议以军袭击外交机构](https://so.toutiao.com/search?keyword=伊朗爆发集会抗议以军袭击外交机构)
 1. [玻璃窗为何会被吹走？专业人士解答](https://so.toutiao.com/search?keyword=玻璃窗为何会被吹走？专业人士解答)
 1. [美15岁女孩被父亲绑架后遭警方射杀](https://so.toutiao.com/search?keyword=美15岁女孩被父亲绑架后遭警方射杀)
@@ -140,7 +156,6 @@
 1. [自闭症有哪些典型表现](https://so.toutiao.com/search?keyword=自闭症有哪些典型表现)
 1. [伊朗：美应为伊朗驻叙使馆遭袭负责](https://so.toutiao.com/search?keyword=伊朗：美应为伊朗驻叙使馆遭袭负责)
 1. [韵达工作人员向记者兜售快递退件](https://so.toutiao.com/search?keyword=韵达工作人员向记者兜售快递退件)
-1. [开封王婆坦言自己追的老公](https://so.toutiao.com/search?keyword=开封王婆坦言自己追的老公)
 1. [淄博烧烤老板们相互送客人](https://so.toutiao.com/search?keyword=淄博烧烤老板们相互送客人)
 1. [菲媒：菲律宾人必须反对与中国开战](https://so.toutiao.com/search?keyword=菲媒：菲律宾人必须反对与中国开战)
 1. [俄罗斯歌曲Dadada掀起翻唱热潮](https://so.toutiao.com/search?keyword=俄罗斯歌曲Dadada掀起翻唱热潮)
